# lg-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: cd-cloud-run.yml  ci.yml  vulnerability-check.yml
src/agent_api/: api.py  app_logging.py  dependencies.py  logging.py  main.py  middleware.py  response_builder.py
src/agent_cli/: cli_entry.py
src/lg_demo/: agent.py  inference_provider.py  llm.py  tools.py
src/lg_demo/agent_v2/: general_cot_agent.py  travel_agent.py
src/lg_demo/agents/: __init__.py  arithmetic_agent.py  trading_agent.py  travel_agent.py
src/lg_demo/core/: arithmetic_agent.py  checkpointing.py  inference_provider.py  model_provider.py  nodes.py  router.py  runtime.py  states.py  tools.py
src/lg_demo/utils/: caching.py  dag.py  disk_cache.py  json_file_writer.py  redis_cache.py  states.py
tests/: conftest.py
tests/unit/agent_api/: test_api.py  test_middleware.py
tests/unit/lg_demo/agents/: test_registry.py
tests/unit/lg_demo/core/: test_checkpointing.py  test_inference_provider.py  test_nodes.py  test_router.py  test_runtime.py
tests/unit/lg_demo/utils/: test_caching.py  test_disk_cache.py  test_json_file_writer.py  test_redis_cache.py
